--- a/drupal/composer.json
+++ b/drupal/composer.json
@@ -22,10 +22,13 @@
         "drupal/core-composer-scaffold": "^10.3",
         "drupal/core-recommended": "^10.3",
         "drupal/elasticsearch_helper": "^8.1",
+        "drupal/entity_browser": "^2.11",
+        "drupal/entity_reference_integrity": "^1.2",
         "drupal/entity_reference_revisions": "^1.12",
         "drupal/field_group": "^3.6",
         "drupal/graphql": "^4.7",
         "drupal/graphql_compose": "^2.2",
+        "drupal/inline_entity_form": "^3.0@RC",
         "drupal/menu_link_attributes": "^1.3",
         "drupal/metatag": "^2.0",
         "drupal/migrate_plus": "^6.0",
