--- a/drupal/config/sync/field.field.node.page.field_content_elements.yml
+++ b/drupal/config/sync/field.field.node.page.field_content_elements.yml
@@ -9,6 +9,7 @@ dependencies:
     - paragraphs.paragraphs_type.file_attachments
     - paragraphs.paragraphs_type.formatted_text
     - paragraphs.paragraphs_type.hero
+    - paragraphs.paragraphs_type.hero_banner
     - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.introduction
     - paragraphs.paragraphs_type.liftups_articles
@@ -42,6 +43,7 @@ settings:
       listing_articles: listing_articles
       file_attachments: file_attachments
       liftups_articles: liftups_articles
+      hero_banner: hero_banner
       introduction: introduction
     negate: 0
     target_bundles_drag_drop:
@@ -60,6 +62,9 @@ settings:
       hero:
         weight: -15
         enabled: true
+      hero_banner:
+        weight: 13
+        enabled: true
       image:
         weight: -13
         enabled: true
@@ -74,9 +79,6 @@ settings:
         enabled: true
       listing_articles:
         weight: 9
-        enabled: true
-      media_text_group:
-        weight: 23
         enabled: true
       video:
         weight: -9
