--- a/drupal/config/sync/field.field.node.frontpage.field_content_elements.yml
+++ b/drupal/config/sync/field.field.node.frontpage.field_content_elements.yml
@@ -9,6 +9,7 @@ dependencies:
     - paragraphs.paragraphs_type.file_attachments
     - paragraphs.paragraphs_type.formatted_text
     - paragraphs.paragraphs_type.hero
+    - paragraphs.paragraphs_type.hero_banner
     - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.liftups_articles
     - paragraphs.paragraphs_type.links
@@ -41,6 +42,7 @@ settings:
       listing_articles: listing_articles
       file_attachments: file_attachments
       liftups_articles: liftups_articles
+      hero_banner: hero_banner
     negate: 0
     target_bundles_drag_drop:
       accordion:
@@ -58,9 +60,15 @@ settings:
       hero:
         weight: -15
         enabled: true
+      hero_banner:
+        weight: 18
+        enabled: true
       image:
         weight: -13
         enabled: true
+      introduction:
+        weight: 20
+        enabled: false
       liftups_articles:
         weight: 17
         enabled: true
